Initial templates and typography styling

--- a/app/index.html
+++ b/app/index.html
@@ -3,5 +3,169 @@ layout: default
 title: ps
 ---
 
-<h1>ps</h1>
-<p>Congratulations! You just created the Playbook for ps.</p>
+<div class="bg-black">
+	<section>
+		<div class="six off-one pad-top-xl pad-bottom-xl">
+			<h1> &nbsp;</h1>
+			<h1> &nbsp;</h1>
+			<h1> &nbsp;</h1>
+		</div>
+	</section>
+</div>	
+
+
+<div class="bg-gray">
+	<section>
+		<div class="ten off-one pad-top-xl pad-bottom-xl text-red">
+			<h1 class="text-center text-xl">Wisdom from<br />Inspirational Minds</h1>
+		</div>
+	</section>
+</div>
+
+<div class="bg-black">
+	<section>
+		<div class="six off-four pad-top-l pad-bottom-xl">
+			<h2><a href="/about">About Us</a></h2>
+			<p class="pad-bottom-m">The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those ingredients which will allow them to maximise their potential in all aspects of their life.</p>
+			<a href="/about" class="btn">LEARN MORE</a>
+		</div>
+	</section>
+</div>	
+
+
+<div class="bg-gray">
+	<section>
+		<div class="six off-four pad-top-l pad-bottom-s">
+			<h2 class="link-black-ul"><a href="/speakers">The Speakers</a></h2>
+			<p>The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those ingredients which will allow them to maximise their potential in all aspects of their life.</p>
+		</div>
+	</section>
+
+	<section>
+		<div class="ten off-one">
+			<ul class="block-grid four-up">
+				<li class="person">
+					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<p class="text-center">
+						<strong>Speaker Name</strong><br />
+						Company
+					</p>
+				</li>
+				<li class="person">
+					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<p class="text-center">
+						<strong>Speaker Name</strong><br />
+						Company
+					</p>
+				</li>
+				<li class="person">
+					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<p class="text-center">
+						<strong>Speaker Name</strong><br />
+						Company
+					</p>
+				</li>
+				<li class="person">
+					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<p class="text-center">
+						<strong>Speaker Name</strong><br />
+						Company
+					</p>
+				</li>
+				<li class="person">
+					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<p class="text-center">
+						<strong>Speaker Name</strong><br />
+						Company
+					</p>
+				</li>
+				<li class="person">
+					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<p class="text-center">
+						<strong>Speaker Name</strong><br />
+						Company
+					</p>
+				</li>
+				<li class="person">
+					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<p class="text-center">
+						<strong>Speaker Name</strong><br />
+						Company
+					</p>
+				</li>
+				<li class="person">
+					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<p class="text-center">
+						<strong>Speaker Name</strong><br />
+						Company
+					</p>
+				</li>
+			</ul>
+		</div>
+	</section>
+
+	<section>
+		<div class="six off-four pad-top-s pad-bottom-xl">
+			<a href="/speakers" class="btn">SEE ALL SPEAKERS</a>
+		</div>
+	</section>
+</div>	
+
+
+<div class="bg-black">
+	<section>
+		<div class="six off-four pad-top-l pad-bottom-m">
+			<h2><a href="/testimonials">Testimonials</a></h2>
+			<p>The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
+		</div>
+	</section>
+
+	<section class="pad-bottom-s">
+		<div class="two off-two">
+			<div class="circle" style=""><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+		</div>
+		<div class="six">
+			<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
+			<strong>—Barry O’Sullivan, Senior Vice President Cisc0</strong></p>
+		</div>
+	</section>
+
+	<section class="pad-top-s">
+		<div class="two off-two">
+			<div class="circle" style=""><!--<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">--></div>
+		</div>
+		<div class="six">
+			<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
+			<strong>—Barry O’Sullivan, Senior Vice President Cisc0</strong></p>
+		</div>
+	</section>
+
+	<section>
+		<div class="six off-four pad-top-m pad-bottom-xl">
+			<a href="/testimonials" class="btn">READ MORE TESTIMONIALS</a>
+		</div>
+	</section>
+</div>	
+
+
+<div class="bg-gray">
+	<section>
+		<div class="six off-four">
+			<h2 class="pad-top-s" style="position:absolute;">Location</h2>
+		</div>
+	</section>
+	<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Convention%20Center%2C%20Spencer%20Dock%2C%20North%20Wall%20Quay%2C%20Dublin%201&key=AIzaSyDMqgqQx0Ts7sJrLKFj-IUrvsqnfPPm_fI"></iframe>
+</div>
+
+
+<div class="bg-black">
+	<section>
+		<div class="six off-four pad-top-l pad-bottom-m">
+			<h2 class=""><a href="/partners">Our Partners</a></h2>
+			<p class="pad-bottom-m">The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
+			<a href="/partners" class="btn">LEARN MORE</a>
+		</div>
+	</section>
+</div>	
+
+{% include shared/register.html %}
