--- a/app/news.html
+++ b/app/news.html
@@ -3,47 +3,52 @@ layout: default
 title: ps
 ---
 
-<div class="bg-black">
-	<section>
-		<div class="six off-one">
-			<h1>Entry Title</h1>
+<div class="bg-black news">
+
+
+<br />
+<br />
+<br />
+<br />
+<br />
+
+
+
+
+	<section class="pad-bottom-l">
+		<div class="six off-four">
+			<h1><a href="link-black-ul">Entry Title</a></h1>
 		</div>
-		<div class="ten">
+		<div class="ten off-one">
 			<div class="nestImage">
-				<img src="http://placehold.it/950x450/fda75f/ffffff">
+				<img src="http://placehold.it/950x490/fda75f/ffffff">
 			</div>
 		</div>
-		<div class="six off-one">
-			<p>The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
-		</div>
-		<div class="two">
+		<div class="two off-two pad-top-s date">
 			<a href="">09.04.13</a>
+		</div>
+		<div class="six pad-top-s">
+			<p>The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
 		</div>
 	</section>
 
 
-	<section>
-		<div class="six off-one">
-			<h1>Entry Title</h1>
+	<section class="pad-bottom-l">
+		<div class="six off-four">
+			<h1><a href="link-black-ul">Entry Title</a></h1>
 		</div>
-		<div class="ten">
+		<div class="ten off-one">
 			<div class="nestImage">
-				<img src="http://placehold.it/950x450/fda75f/ffffff">
+				<img src="http://placehold.it/950x490/fda75f/ffffff">
 			</div>
 		</div>
-		<div class="six off-one">
-			<p>The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
+		<div class="two off-two pad-top-s date">
+			<a href="" class="">09.04.13</a>
 		</div>
-		<div class="two">
-			<a href="">09.04.13</a>
+		<div class="six pad-top-s">
+			<p>The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
 		</div>
 	</section>
 </div>	
 
-<div class="bg-gray">
-	
-	<div class="six off-three">
-		<p class="text-red">The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential <a href="">in all aspects</a> of their life.</p>
-	</div>
-
-</div>
+{% include shared/register.html %}
