added more templates and began styling of forms

--- a/app/about.html
+++ b/app/about.html
@@ -7,15 +7,17 @@ title: ps
 
 <div class="bg-black">
 	<section>
-		<div class="six off-one">
+		<div class="six off-one pad-top-l pad-bottom-l">
 			<h2>Entry Title</h2>
-			<p>The Laya Healthcare Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from
-				the successful businessman to the aspiring academic strives for something more,something bigger and in essence tries to
-				find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
-				     
-			<p>The Laya Healthcare Pendulum Summit will showcase a diverse range of international and ‘home grown’ speakers and guests who have reached the pinnacle of their industry. They will demonstrate how they use a combination of hard work, innovation, inspiration and motivation to overcome adversity and maintain a successful, balanced life while keeping their eye on the end goal. Our speakers will be experts in business, technology, organisational development and much more. These industry leaders will be invited to dig a little deeper into the areas of psychology to demonstrate the mind-set behind their achievements. The fact that the speakers will have a diverse approach and style to such topics will make for a one of a kind event!</p>
+			<p>The Pendulum Summit is a daylong forum for discussion that was born from the premise that everyone from the successful business person to the aspiring academic strives for something more, and in essence tries to piece together those magic ingredients which will allow them to maximise their potential in all aspects of their lives, whilst maintaining  a positively balanced life.</p>
+
+ 			<p>We are in the business of conscious business and we operate in every sector because we believe that every person wants to be better than they were yesterday and so we empower them so they can live the life they dreamed of. At the Pendulum Summit our speakers showcase ‘Wisdom from Inspirational Minds’ in the hope that the thought leaders and visionary professionals in the audience will be inspired to lead a fulfilled, successful life. We want our delegates to leave the summit empowered with knowledge and courage to lead, not armed with ‘intangible ideas which they do not know how to execute.’ We want to play our part in restoring what has been lost in Ireland, instilling the country with a sense of ambition and courage, and making our tomorrow an exceptional place for our children.</p>
+
+			<p>The Pendulum Summit is not for people who want an easy life; it is for people who want an exceptional life. It is an all-inclusive event, which is of interest to an individual just as much as it is to a team of corporate executives.</p>
+			
+			<p><strong>Envisage        Engage            Enrich             Empower</strong></p>
 		</div>
-		<div class="four">
+		<!--<div class="four">
 			<ul>
 				<li><h4>Delegate Profile</h4></li>
 				<li><p>Business Influencers</p></li>
@@ -27,21 +29,21 @@ title: ps
 				<li><p>Business Influencers</p></li>
 				<li><p>Business Influencers</p></li>
 			</ul>
-		</div>
+		</div>-->
 	</section>
 
 	<section>
-		<div class="two off-one">
+	<div class="two off-two">
 			<div class="circle" style=""><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
 		</div>
-		<div class="seven">
+		<div class="six">
 			<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
 			<strong>—Barry O’Sullivan, Senior Vice President Cisc0</strong></p>
 		</div>
 	</section>
 
 	<section>
-		<div class="eight off-two">
+		<div class="eight off-two pad-top-m pad-bottom-m">
 			<h2 class="text-center">Why Attend?</h2>
 			<li><p>Business Influencers</p></li>
 			<li><p>Business Influencers</p></li>
@@ -52,10 +54,10 @@ title: ps
 	</section>
 	
 	<section>
-		<div class="six off-one">
+		<div class="six off-one pad-top-s">
 			<h2>Previous Attendees Include&#8230;</h2>
 		</div>	
-		<div class="ten off-one">
+		<div class="ten off-one pad-bottom-l">
 			<ul class="block-grid four-up">
 				<li class="">
 					<p class="text-center">
@@ -102,15 +104,4 @@ title: ps
 	</section>
 </div>	
 
-
-<div class="bg-gray">
-
-	<section>
-		<div class="six off-three">
-			<p class="text-red registerButton">The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
-		</div>
-
-	</section>
-
-
-</div>
+{% include shared/register.html %}
