--- a/app/news.html
+++ b/app/news.html
@@ -15,9 +15,9 @@ title: ps
 
 
 
-	<section class="pad-bottom-l">
+	<section class="pad-bottom-xl">
 		<div class="six off-four">
-			<h1><a href="link-black-ul">Entry Title</a></h1>
+			<h1><a href="/news/entry" class="link-black-ul">Entry Title</a></h1>
 		</div>
 		<div class="ten off-one">
 			<div class="nestImage">
@@ -25,17 +25,19 @@ title: ps
 			</div>
 		</div>
 		<div class="two off-two pad-top-s date">
-			<a href="">09.04.13</a>
+			<a href="/news/entry">09.04.13</a>
 		</div>
 		<div class="six pad-top-s">
-			<p>The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
+			<p class="pad-bottom-m">The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
+
+			<a href="/news/entry" class="btn">READ MORE</a>
 		</div>
 	</section>
 
 
-	<section class="pad-bottom-l">
+	<section class="pad-bottom-xl">
 		<div class="six off-four">
-			<h1><a href="link-black-ul">Entry Title</a></h1>
+			<h1><a href="/news/entry" class="link-black-ul">Entry Title</a></h1>
 		</div>
 		<div class="ten off-one">
 			<div class="nestImage">
@@ -43,12 +45,13 @@ title: ps
 			</div>
 		</div>
 		<div class="two off-two pad-top-s date">
-			<a href="" class="">09.04.13</a>
+			<a href="/news/entry">09.04.13</a>
 		</div>
 		<div class="six pad-top-s">
-			<p>The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
+			<p class="pad-bottom-m">The Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful business professional to the aspiring academic strives for something more, something bigger and in essence tries to find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
+
+			<a href="/news" class="btn">READ MORE</a>
 		</div>
 	</section>
-</div>	
 
 {% include shared/register.html %}
