--- a/app/partners.html
+++ b/app/partners.html
@@ -9,12 +9,8 @@ title: ps
 	<section>
 		<div class="six off-four pad-top-l pad-bottom-xl">
 			<h2>Join us on our Journey</h2>
-			<p>The Laya Healthcare Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from
-				the successful businessman to the aspiring academic strives for something more,something bigger and in essence tries to
-				find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
-			<p class="pad-bottom-m">The Laya Healthcare Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from the successful businessman to the aspiring academic strives for something more,something bigger and in essence tries to
-			find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
-			<a href="" class="btn">CONTACT US FOR PARTNERSHIP OPPORTUNITIES</a>
+			<p class="pad-bottom-s">Pendulum Partners are an integral part of the Pendulum Brand and they reflect the Pendulum Values. So if your company has honesty, integrity, creativity, and innovation as its core values then contact us to discuss our exciting new journey together.</p>
+			<a href="" class="btn">You can make a difference, together we can BE the difference!</a>
 		</div>
 	</section>
 
