--- a/app/testimonials.html
+++ b/app/testimonials.html
@@ -8,10 +8,9 @@ title: ps
 <div class="bg-black">
 	<section>
 		<div class="six off-four pad-top-l pad-bottom-l">
-			<h2>Looking back at a successful 2014</h2>
-			<p>The Laya Healthcare Pendulum Summit is a day-long forum for discussion that was born from the premise that everyone, from
-				the successful businessman to the aspiring academic strives for something more,something bigger and in essence tries to
-				find those magic ingredients which will allow them to maximise their potential in all aspects of their life.</p>
+			<h2>Spark Creativity and Innovation</h2>
+			<p>We all need to take a break from routine in order to stay at the top of our game. A change of scenery, especially one that is rich with educational and networking opportunities, can help you spark your creativity, develop new ideas and think in innovative ways.</p> 
+			<p>Empower yourself at the Pendulum Summit and reach your full potential in all aspects of your life.</p>
 		</div>
 	</section>
 
@@ -25,7 +24,7 @@ title: ps
 
 	<section>
 		<div class="six off-five pad-bottom-s">
-			<h2>What People are Saying</h2>
+			<h2>Don’t take our word for it</h2>
 
 			
 			<div class="pad-top-xl pad-bottom-xl">Slider</div>
