--- a/app/members-list.html
+++ b/app/members-list.html
@@ -3,17 +3,20 @@ layout: default
 title: ps
 ---
 
-<div style="background:url('/images/partners.jpg') center center;height:450px;">BIG IMAGE</div>
 
 <div class="bg-gray red-ul">
 
 	<section>
-		<div class="six off-four pad-top-l pad-bottom-s">
-			<h2 class="red-ul">Speakers for 2015</h2>
+		<div class="six off-one pad-top-l pad-bottom-l">
+			<h2 class="">Members</h2>
 			<p>We ask the Pendulum speakers to pour their attributes into a metaphorical mixing bowl and shower the audience with truth and inspiration as they take them through a guided journey of their life experiences.
 			</p>
 			<p>Each speaker is asked to demonstrate how they used a combination of hard work, inspiration and motivation to overcome adversity and maintain a successful balanced life.</p>
-			<p><em>“In everyone's life, at some time, our inner fire goes out. It is then burst into flame by an encounter with another human being. We should all be thankful for those people who rekindle the inner spirit.“</em> <strong>—Albert Schweitzer</strong></p>
+			
+			<div class="pad-top-s">
+				<div class="nine"><input type="text" name="user" class="email"></div>
+				<div class="three"><input type="submit" value="Submit" class="btn"></div>
+			</div>
 		</div>
 	</section>
 	<section>
