--- a/app/speakers.html
+++ b/app/speakers.html
@@ -20,56 +20,56 @@ title: ps
 		<div class="ten off-one">
 			<ul class="block-grid four-up">
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
@@ -88,56 +88,56 @@ title: ps
 		<div class="ten off-one pad-bottom-xl">
 			<ul class="block-grid four-up">
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
 					</p>
 				</li>
 				<li class="person">
-					<div class="circle"><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+					<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					<p class="text-center">
 						<strong>Speaker Name</strong><br />
 						Company
