commit before test deploy ugh this is the ugliest thing ever

--- a/app/partners.html
+++ b/app/partners.html
@@ -15,52 +15,20 @@ title: ps
 	</section>
 
 	<section>
-		<div class="six off-four pad-bottom-s">
+		<div class="six off-four">
 			<h2>Thanks to our 2014 Sponsors</h2>
 		</div>
 
 		<div class="ten off-one pad-top-s pad-bottom-xl">
-			<ul class="block-grid four-up">
-				<li class="">
-					<p class="text-center">
-						Company
-					</p>
-				</li>
-				<li class="">
-					<p class="text-center">
-						Company
-					</p>
-				</li>
-				<li class="">
-					<p class="text-center">
-						Company
-					</p>
-				</li>
-				<li class="">
-					<p class="text-center">
-						Company
-					</p>
-				</li>
-				<li class="">
-					<p class="text-center">
-						Company
-					</p>
-				</li>
-				<li class="">
-					<p class="text-center">
-						Company
-					</p>
-				</li>
-				<li class="">
-					<p class="text-center">
-						Company
-					</p>
-				</li>
-				<li class="">
-					<p class="text-center">
-						Company
-					</p>
-				</li>
+			<ul class="block-grid four-up company text-center">
+				<li class="">Company</li>
+				<li class="">Company</li>
+				<li class="">Company</li>
+				<li class="">Company</li>
+				<li class="">Company</li>
+				<li class="">Company</li>
+				<li class="">Company</li>
+				<li class="">Company</li>
 			</ul>
 		</div>
 	</section>
