--- a/app/about.html
+++ b/app/about.html
@@ -33,8 +33,8 @@ title: ps
 	</section>
 
 	<section>
-	<div class="two off-two">
-			<div class="circle" style=""><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+		<div class="two off-two">
+			<div class="circleSmall" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 		</div>
 		<div class="six">
 			<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
@@ -45,11 +45,36 @@ title: ps
 	<section>
 		<div class="eight off-two pad-top-m pad-bottom-m">
 			<h2 class="text-center">Why Attend?</h2>
-			<li><p>Business Influencers</p></li>
-			<li><p>Business Influencers</p></li>
-			<li><p>Business Influencers</p></li>
-			<li><p>Business Influencers</p></li>
-			<li><p>Business Influencers</p></li>
+
+			<div class="wrap">
+				<div class="twelve">
+				  <ul class="tabs text-center" data-tabgroup="first-tab-group">
+				    <li><a href="#tab1" class="active">タブ 1</a></li>
+				    <li><a href="#tab2">タブ 2</a></li>
+				  </ul>
+				</div>
+				<div class="twelve">
+				  <section id="first-tab-group" class="tabgroup">
+				   <div id="tab1">
+				      <br />
+				      <p>1 私も今ちょうどどんな話院というものの日に始めでです。おそらく今が創作物もつるつるその所有だでかもにして来ないのも学習伴っませたて、どうには落ちましんでしょう。個性の考えですのはよほど事実にとうとうたたです。</p>
+				    </div>
+				    <div id="tab2">
+				      <br />
+				      <ol>
+				      	<li><p>Business Influencers</p></li>
+						<li><p>Business Influencers</p></li>
+						<li><p>Business Influencers</p></li>
+						<li><p>Business Influencers</p></li>
+						<li><p>Business Influencers</p></li>
+					  </ol>
+				    </div>
+				  </section>
+				</div>
+			</div>
+
+
+			
 		</div>
 	</section>
 	
@@ -58,7 +83,7 @@ title: ps
 			<h2>Previous Attendees Include&#8230;</h2>
 		</div>	
 		<div class="ten off-one pad-bottom-l">
-			<ul class="block-grid four-up">
+			<ul class="block-grid four-up company">
 				<li class="">
 					<p class="text-center">
 						Company
