--- a/app/testimonials.html
+++ b/app/testimonials.html
@@ -38,7 +38,7 @@ title: ps
 
 	<section class="pad-bottom-s">
 		<div class="two off-two">
-			<div class="circle" style=""><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+			<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 		</div>
 		<div class="six">
 			<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
@@ -47,7 +47,7 @@ title: ps
 	</section>
 	<section class="pad-bottom-s">
 		<div class="two off-two">
-			<div class="circle" style=""><img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg"></div>
+			<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 		</div>
 		<div class="six">
 			<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
@@ -61,7 +61,7 @@ title: ps
 			<ul class="block-grid two-up text-s">
 				<li class="">
 					<div class="four">
-						<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+						<div class="circleSmall" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					</div>
 					<div class="eight">
 						<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
@@ -70,7 +70,7 @@ title: ps
 				</li>
 				<li class="">
 					<div class="four">
-						<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+						<div class="circleSmall" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					</div>
 					<div class="eight">
 						<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
@@ -79,7 +79,7 @@ title: ps
 				</li>
 				<li class="">
 					<div class="four">
-						<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+						<div class="circleSmall" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					</div>
 					<div class="eight">
 						<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
@@ -88,7 +88,7 @@ title: ps
 				</li>
 				<li class="">
 					<div class="four">
-						<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">
+						<div class="circleSmall" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 					</div>
 					<div class="eight">
 						<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
@@ -102,7 +102,7 @@ title: ps
 
 	<section class="pad-bottom-s">
 		<div class="two off-two">
-			<div class="circle" style=""><!--<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">--></div>
+			<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 		</div>
 		<div class="six">
 			<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
@@ -111,7 +111,7 @@ title: ps
 	</section>
 	<section class="pad-bottom-xl">
 		<div class="two off-two">
-			<div class="circle" style=""><!--<img src="https://31.media.tumblr.com/c6fdcd37340b1c26dd8c60f5e868fdbb/tumblr_inline_n48tp4I7Mh1r5fnsl.jpg">--></div>
+			<div class="circle" style="background-image: url('http://media.tumblr.com/tumblr_lti1j6eb9E1qdjfkx.png');"></div>
 		</div>
 		<div class="six">
 			<p><em>“I was really thrilled to speak at the Pendulum Summit. The quality of not just the speakers, but the attendees was incredibly high. I learned more in one day than I normally would in a week. It was a great way to start the year and will be a fixture in my calendar from now on.”</em><br />
